--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
-    "react-parallax-tilt": "^1.7.68"
+    "react-parallax-tilt": "^1.7.68",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
