--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
-    "react-parallax-tilt": "^1.7.68"
+    "react-icons": "^4.6.0",
+    "react-parallax-tilt": "^1.7.68",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
