Added splash screen

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-parallax-tilt": "^1.7.68",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "react-spinners": "^0.13.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
